# predis

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile.dev  LICENSE  README.md  STORY_1_6_COMPLETION.md  compile_and_run_report.sh  comprehensive_gpu_benchmark  demo_gpu_integration.cpp  deploy_predis.sh  dev_environment_info.md  docker-compose.dev.yml  docker-compose.yml  epic3_ds.md  generate_html_report.sh  generate_real_html_report.py  pyproject.toml  real_gpu_benchmark  requirements.txt  run_real_gpu_benchmark.sh  test_gpu_integration.sh
.github/: pull_request_template.md
benchmark_results/: README.md  benchmark_report_1747901736.txt  benchmark_results_1747901736.json  comprehensive_gpu_results_1747975989.json  comprehensive_gpu_results_1748073199.json  lstm_synthetic_results_20250522_231237.json  lstm_validation_summary_20250522_231237.md  real_gpu_results_1747975875.json  real_gpu_results_1748073712.json
dev_scripts/: install_dev_tools.sh  monitor_quota.sh  predis_iam_setup.sh  predisec2gpu-policy.json  predisiamroles-policy.json  predisinfrastructure-policy.json  predismonitoring-policy.json  prediss3-policy.json  predissecrets-policy.json  predisservicequotas-policy.json  prometheus.yml  push.sh  quick_test.sh  (+3 more)
src/: CMakeLists.txt  arch_validation_test.cpp  mock_predis_client.py  predis_server.cpp
src/api/: predis_client.cpp  predis_client.h
src/benchmarks/: benchmark_reporter.cpp  comprehensive_gpu_benchmark.cu  data_collector.cpp  data_collector.h  ds_metrics_benchmark.cpp  ds_metrics_suite.cpp  ds_metrics_suite.h  epic3_performance_benchmark.cpp  generate_professional_report.cpp  ml_performance_validator.cpp  ml_performance_validator.h  performance_benchmark_suite.cpp  performance_benchmark_suite.h  professional_report_generator.cpp  professional_report_generator.h  real_gpu_benchmark.cu  real_report_generator.cpp  standalone_report_generator.cpp  visualization_generator.h  write_performance_profiler.cpp  write_performance_profiler.h
src/core/: advanced_batch_processor.cu  advanced_batch_processor.h  batch_data_manager.cpp  batch_integration_helper.cpp  batch_integration_helper.h  cache_manager.cpp  cache_manager.h  gpu_cache_manager.h  kernel_integration_manager.cpp  kernel_integration_manager.h  memory_manager.cu  memory_manager.h  memory_pipeline_optimizer.cu  memory_pipeline_optimizer.h  optimized_gpu_kernels.cu  optimized_gpu_kernels.h  simple_cache_manager.cpp  simple_cache_manager.h  write_optimized_kernels.cu  write_optimized_kernels.h
src/core/data_structures/: gpu_hash_table.cu  gpu_hash_table.h
src/credentials/: aws_secrets_manager.h  credential_manager_interface.h
src/dashboard/: epic3_performance_dashboard.cpp  ml_performance_dashboard.cpp  real_time_dashboard.cpp  real_time_dashboard.h
src/enterprise/: CMakeLists.txt
src/enterprise/deployment/: blue_green_controller.cpp  canary_release_manager.cpp  zero_downtime_deployment.cpp
src/enterprise/integration/: cloudwatch_exporter.cpp  datadog_exporter.cpp  monitoring_integrations.cpp  monitoring_integrations.h  newrelic_exporter.cpp  prometheus_exporter.cpp
src/enterprise/monitoring/: aiops_monitoring.cpp  auto_remediation.cpp  predictive_analytics.cpp
src/enterprise/orchestration/: compliance_manager.cpp  cost_optimizer.cpp  multi_cloud_orchestrator.cpp
src/logger/: access_pattern_logger.cpp  access_pattern_logger.h  optimized_access_logger.cpp  optimized_access_logger.h  pattern_data_exporter.h
src/ml/: README.md  __init__.py  adaptive_learning_system.cpp  adaptive_learning_system.h  feature_engineering.cpp  feature_engineering.h  inference_engine.cpp  inference_engine.h  model_performance_monitor.cpp  model_performance_monitor.h
src/ml/data/synthetic/: __init__.py  generators.py  validation.py  workloads.py
src/ml/data/utils/: __init__.py  exporters.py  formatters.py
src/ml/examples/: feature_engineering_demo.py
src/ml/features/: __init__.py  extractors.py  pipeline.py  realtime.py  sequential.py  temporal.py
src/ml/models/: ensemble_model.cpp  ensemble_model.h  lstm_model.cpp  lstm_model.h  model_factory.cpp  model_interfaces.h  xgboost_model.cpp  xgboost_model.h
src/ml/models/lstm/: cache_integration.py  lstm_cache_predictor.py  run_synthetic_validation.py  simple_synthetic_results.py
src/mlops/: CMakeLists.txt  customer_roi_dashboard.py  customer_roi_dashboard_real.py
src/mlops/customer_adaptation/: customer_model_manager.cpp  customer_model_manager.h  federated_learning_client.cpp  federated_learning_client.h
src/mlops/data_collector/: production_data_collector.cpp  production_data_collector.h  production_data_collector_safe.cpp
src/mlops/drift_detection/: model_drift_detector.cpp  model_drift_detector.h
src/mlops/retraining/: auto_retraining_pipeline.cpp  auto_retraining_pipeline.h
src/ppe/: prefetch_coordinator.cpp  prefetch_coordinator.h  prefetch_monitor.cpp  prefetch_monitor.h
tests/: CMakeLists.txt  epic2_benchmark_simple  execute_epic2_benchmark_simple.cpp  execute_epic2_benchmark_suite.cpp  gpu_hash_table_test.cpp  gpu_integration_test.cpp  gpu_memory_manager_test.cpp  gpu_write_test  gpu_write_test.cu  mock_client_test.py  redis_vs_predis_benchmark.py  simple_memory_test.cpp  test_hash_table.sh  test_memory_manager.sh
tests/benchmarks/: benchmark_suite_test.cpp
tests/dashboard/: dashboard_integration_test.cpp
tests/gpu/: compile_test.sh  cuda_test  cuda_test.cu
tests/integration/: full_system_tests.cpp  performance_tests.cpp  prefetch_integration_test.cpp
tests/ml/: adaptive_learning_test.cpp  ds_metrics_test.cpp  feature_engineering_test.cpp  model_tests.cpp  test_feature_engineering.py
tests/performance/: access_logger_overhead_test.cpp  advanced_batch_performance_test.cpp  benchmark_suite.cpp  memory_pipeline_performance_test.cpp  ml_performance_test.cpp  optimized_kernel_performance_test.cpp  optimized_logger_test.cpp  write_bottleneck_analysis.cpp  write_optimization_validation.cpp
tests/unit/: api_tests.cpp  core_tests.cpp  logger_tests.cpp  ppe_tests.cpp
(+110 files in other folders)
